--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+		<link rel="stylesheet" href="/resource/loading.css" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+		<script defer src="index_bundle.js"></script>
+    <title>PZAdmin</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>
+        We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please
+        enable it to continue.
+      </strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <!-- 页面渲染之前加载动画 -->
+      <div class="app-loading">
+        <img class="app-loading_logo" src="/resource/logo.png" />
+        <div class="app-loading__dot-wrapper">
+          <div class="app-loading__dot">
+            <i class="left top"></i>
+            <i class="left bottom delay-400"></i>
+            <i class="right top delay-800"></i>
+            <i class="right bottom delay-1200"></i>
+          </div>
+        </div>
+        <h2 class="app-loading_title">PZAdmin</h2>
+      </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
